<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AD_Employee">


    <View
        android:id="@+id/view2"
        android:layout_width="425dp"
        android:layout_height="58dp"
        android:background="@color/l1_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Events"
        android:textColor="@color/d5_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/log"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button1"
        android:backgroundTint="@color/d5_blue"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/logout"
        android:textColor="@android:color/background_light"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView23"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginBottom="616dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/employee_management"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/a1"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/AA3"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/custom_buttton2"
        android:text="@string/view_btn"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_buttton2"
        android:text="@string/delete_btn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/emp8" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/custom_buttton2"
        android:text="@string/search_btn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emp8" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/custom_buttton2"
        android:text="@string/edit_btn"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_buttton2"
        android:text="@string/insert_btn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emp8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/aa5"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/aa6"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/aa8"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/aa9"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Email Address"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/emp5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/emp1"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/emp2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/emp1" />

    <EditText
        android:id="@+id/emp3"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/emp2" />

    <EditText
        android:id="@+id/emp4"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="phone"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/emp3" />

    <EditText
        android:id="@+id/emp5"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/emp4" />

    <EditText
        android:id="@+id/emp8"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/emp4" />

    <EditText
        android:id="@+id/emp6"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/spinner1"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/emp5" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emp6"
        app:layout_constraintTop_toBottomOf="@+id/emp5" />


</androidx.constraintlayout.widget.ConstraintLayout>