<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event_booking">

    <View
        android:id="@+id/view2"
        android:layout_width="425dp"
        android:layout_height="58dp"
        android:background="@color/l1_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewss"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Clinic"
        android:textColor="@color/d5_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/logout"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button1"
        android:backgroundTint="@color/d5_blue"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/logout"
        android:textColor="@android:color/background_light"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="297dp"
        android:layout_height="31dp"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal"
        android:text="Clinic Booking"
        android:textAlignment="center"
        android:textColor="@color/d5_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="Name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/B4"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/B5"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="Clinic Date"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="Next Clinic Date"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="No of appo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/phoneNo" />

    <EditText
        android:id="@+id/roomNumber"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="No of appo"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_buttton2"
        android:shadowColor="#FFFFFF"
        android:text="Confirm"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Enter Your Name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <Button
        android:id="@+id/search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/check_in"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <TextView
        android:id="@+id/check_in"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="clinic_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <TextView
        android:id="@+id/check_out"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/check_in" />

    <Button
        android:id="@+id/view"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_buttton2"
        android:text="VIEW  "
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/update"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_buttton2"
        android:text="UPDATE "
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomNumber" />

    <Button
        android:id="@+id/delete"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_buttton2"
        android:text="CANCEL "
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toBottomOf="@+id/roomNumber" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/personName" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="Clinic Type"
        android:textColor="#000003"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/type"
        android:layout_width="161dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Type"
        android:inputType="textPersonName"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:dropDownSelector="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/type"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="15dp"
        android:dropDownSelector="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/roomNumber"
        app:layout_constraintTop_toBottomOf="@+id/search" />




</androidx.constraintlayout.widget.ConstraintLayout>